@@ -1,3 +1,8 @@
+2006-02-24  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/htdocs/bugs/bugs.xml:
+	  Add more milestones.
+
 2006-02-21  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* src/htdocs/news/news.xml:
